[package]
name = "elementary_ca_cli_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Jose Arturo Barrera <j.arturo.b.g@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An elementary cellular automata simulator"
readme = "README.md"
keywords = ["cli", "ca", "simulator"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.5.3"
clap = { version = "3.1.18", features = ["derive"] }
